--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
     "@types/react": "18.2.37",
-    "@types/react-dom": "18.2.15"
+    "@types/react-dom": "18.2.15",
+    "emittery": "^1.0.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
